# dmzipper

./: .travis.yml  CMakeLists.txt  README.md
include/: dmzipper.h  dmzipper_config.h.in
src/dmzipper/tps/: dirent.c  dirent.h
src/dmzipper_module/: dmzipper_module.cpp  dmzipper_module.h
src/minizip/: iowin32.c  iowin32.h
src/minizip/aes/: entropy.c
test/dmzippertest/: dmzippertest.cpp
test/file_zip_test/: file_zip_test.cpp
test/memory_zip_test/: main.cpp  memory_zip_test.cpp
